manifests-failed/prometheus-operator-13.0.1.tgz-manifest.yaml
---
# Source: prometheus-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-prometheus-oper
  namespace: prometheus-operator-13.0.1.tgz
  labels:
    app: prometheus-operator
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "13.0.1"
    app.kubernetes.io/part-of: prometheus-operator
    chart: prometheus-operator-13.0.1
    release: "my-release"
    heritage: "Helm"
spec:
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app: prometheus-operator
    release: "my-release"
  type: "ClusterIP"
---
# Source: prometheus-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-prometheus-oper
  namespace: prometheus-operator-13.0.1.tgz
  labels:
    app: prometheus-operator
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "13.0.1"
    app.kubernetes.io/part-of: prometheus-operator
    chart: prometheus-operator-13.0.1
    release: "my-release"
    heritage: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-operator
      release: "my-release"
  template:
    metadata:
      labels:
        app: prometheus-operator
        
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "13.0.1"
        app.kubernetes.io/part-of: prometheus-operator
        chart: prometheus-operator-13.0.1
        release: "my-release"
        heritage: "Helm"
    spec:
      containers:
        - name: prometheus-operator
          image: "quay.io/prometheus-operator/prometheus-operator:v0.73.2"
          imagePullPolicy: "IfNotPresent"
          args:
            - --kubelet-service=kube-system/my-release-prometheus-oper-kubelet
            - --localhost=127.0.0.1
            - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.73.2
            - --config-reloader-cpu-request=200m
            - --config-reloader-cpu-limit=200m
            - --config-reloader-memory-request=50Mi
            - --config-reloader-memory-limit=50Mi
            - --thanos-default-base-image=quay.io/thanos/thanos:v0.34.1
            - --web.enable-tls=true
            - --web.cert-file=/cert/cert
            - --web.key-file=/cert/key
            - --web.listen-address=:10250
            - --web.tls-min-version=VersionTLS13
          ports:
            - containerPort: 10250
              name: https
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tls-secret
              mountPath: /cert
              readOnly: true
      volumes:
        - name: tls-secret
          secret:
            defaultMode: 420
            secretName: my-release-prometheus-oper-admission
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: my-release-prometheus-oper
---
# Source: prometheus-operator/templates/admission-webhooks/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name:  my-release-prometheus-oper-admission
  labels:
    app: prometheus-operator-admission    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "13.0.1"
    app.kubernetes.io/part-of: prometheus-operator
    chart: prometheus-operator-13.0.1
    release: "my-release"
    heritage: "Helm"
webhooks:
  - name: prometheusrulemutate.monitoring.coreos.com
    failurePolicy: Ignore
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - "*"
        resources:
          - prometheusrules
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: prometheus-operator-13.0.1.tgz
        name: my-release-prometheus-oper
        path: /admission-prometheusrules/mutate
    timeoutSeconds: 10
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
---
# Source: prometheus-operator/templates/admission-webhooks/validatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name:  my-release-prometheus-oper-admission
  labels:
    app: prometheus-operator-admission    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "13.0.1"
    app.kubernetes.io/part-of: prometheus-operator
    chart: prometheus-operator-13.0.1
    release: "my-release"
    heritage: "Helm"
webhooks:
  - name: prometheusrulemutate.monitoring.coreos.com
    failurePolicy: Ignore
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - "*"
        resources:
          - prometheusrules
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: prometheus-operator-13.0.1.tgz
        name: my-release-prometheus-oper
        path: /admission-prometheusrules/validate
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
